feat(left-navigation-bar)

--- a/src/shared-components/my-layout/my-layout.module.css
+++ b/src/shared-components/my-layout/my-layout.module.css
@@ -1,16 +1,21 @@
 .container {
-    display: flex;
     min-height: 100%;
     padding-left: 16px;
     padding-right: 16px;
     padding-top: 20px;
     padding-bottom: 32px;
+    overflow-y: auto;
 }
 
+.innerContainer {
+    display: flex;
+    min-height: 100%;
+}
 
 .sideContainer {
     width: 240px;
     margin-right: 20px;
+    flex-shrink: 0;
 }
 
 .centralContainer {
