--- a/src/shared-components/my-button/my-button.module.css
+++ b/src/shared-components/my-button/my-button.module.css
@@ -5,6 +5,8 @@
     padding-right: 16px;
     display: flex;
     align-items: center;
+    border-radius: 4px;
+    box-shadow: none;
 }
 
 .container > *:not(:last-child) {
