fix(left-navigation-bar): remove the ::after on the menu items

--- a/src/shared-components/left-navigation-bar/left-navigation-bar.module.css
+++ b/src/shared-components/left-navigation-bar/left-navigation-bar.module.css
@@ -42,6 +42,10 @@
     color: var(--app-color-white);;
 }
 
+.menuItem:global(::after) {
+    display: none;
+}
+
 .AdministratorModeButtonContainer {
     padding: 12px;
 }
