--- a/src/shared-components/my-layout/my-layout.module.css
+++ b/src/shared-components/my-layout/my-layout.module.css
@@ -1,10 +1,24 @@
 .container {
+    display: none;
     min-height: 100%;
     padding-left: 16px;
     padding-right: 16px;
     padding-top: 20px;
     padding-bottom: 32px;
     overflow-y: auto;
+}
+
+.mobileContainer {
+}
+
+@media (min-width: 992px) {
+    .container {
+        display: block;
+    }
+
+    .mobileContainer {
+        display: none;
+    }
 }
 
 .innerContainer {
