--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,8 +2,20 @@
   font-weight: 700;
 }
 
+@mixin font-p1 {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
 @mixin font-p2 {
   font-size: 14px;
   line-height: 22px;
+  font-weight: 400;
+}
+
+@mixin font-p3 {
+  font-size: 12px;
+  line-height: 20px;
   font-weight: 400;
 }
