--- a/src/shared-components/table/my-table.module.scss
+++ b/src/shared-components/table/my-table.module.scss
@@ -14,6 +14,7 @@
   .ant-table {
     background: transparent;
     @include font-p1;
+    color: var(--app-color-text-primary);
   }
 
   .ant-table-thead {
@@ -22,6 +23,7 @@
     & > tr > th {
       background: transparent;
       @include font-p3;
+      color: var(--app-color-text-primary);
     }
   }
 }
