--- a/src/shared-components/my-layout/my-layout.module.css
+++ b/src/shared-components/my-layout/my-layout.module.css
@@ -1,5 +1,5 @@
-.container {
-    display: none;
+.desktopContainer {
+    display: block;
     min-height: 100%;
     padding-left: 16px;
     padding-right: 16px;
@@ -12,16 +12,6 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-}
-
-@media (min-width: 992px) {
-    .container {
-        display: block;
-    }
-
-    .mobileContainer {
-        display: none;
-    }
 }
 
 .innerContainer {
