fix(search-input): padding

--- a/src/shared-components/search-input/search-input.module.scss
+++ b/src/shared-components/search-input/search-input.module.scss
@@ -8,6 +8,8 @@
     .ant-input-affix-wrapper {
       border-radius: 4px !important;
       border-color: var(--app-border-color);
+      padding-left: 12px;
+      padding-right: 12px;
     }
     input::placeholder {
       color: var(--app-color-text-secondary);
