--- a/src/pages/main/components/admin-button/admin-button.module.scss
+++ b/src/pages/main/components/admin-button/admin-button.module.scss
@@ -1,12 +1,9 @@
+@import "../../../../shared-style/variables";
+
 .container {
     width: 100%;
-    text-shadow: none;
-    padding-left: 16px;
-    padding-right: 16px;
     display: flex;
     align-items: center;
-    border-radius: 4px;
-    box-shadow: none;
 }
 
 .container > *:not(:last-child) {
